--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1>Hello world</h1>
+        <p>I'm curious</p>
         <script src="" async defer></script>
     </body>
 </html>
